<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="hero"
            type="non.shahad.heroesfandom.data.local.entities.HeroEntity" />
    </data>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/heroesAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/heroesCollapsing"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="true"
            app:statusBarScrim="@android:color/transparent"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="center|bottom"
            app:expandedTitleMarginBottom="20dp"
            app:toolbarId="@id/toolbar"
            app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:id="@+id/heroesImageView"
                android:layout_width="122dp"
                android:layout_height="122dp"
                app:layout_collapseMode="parallax"
                tools:ignore="contentDescription"
                android:layout_gravity="center"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                android:fitsSystemWindows="true"
                app:titleTextColor="@android:color/white"
                android:elevation="0dp"
                app:menu="@menu/heroesdetail_toolbar_item"
                app:title="@{hero.name}"
                android:theme="@style/AppTheme.PopupOverlay"
                style="@style/ToolBarWithNavigationBack">


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/intelligence"
                    android:textColor="@color/not_selected_gray_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/intelligenceTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:text="@{hero.powerstats.intelligence.toString()}" />

                <ProgressBar
                    android:id="@+id/intelligenceProgress"
                    style="@style/ProgressBarTheme"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="4"
                    android:indeterminate="false"
                    android:layout_gravity="center"
                    android:max="100"
                    android:progress="@{hero.powerstats.intelligence}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/strength"
                    android:textColor="@color/not_selected_gray_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/strengthTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:text="@{hero.powerstats.strength.toString()}" />

                <ProgressBar
                    android:id="@+id/strengthProgress"
                    style="@style/ProgressBarTheme"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="4"
                    android:indeterminate="false"
                    android:layout_gravity="center"
                    android:max="100"
                    android:progress="@{hero.powerstats.strength}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/speed"
                    android:textColor="@color/not_selected_gray_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/speedTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:text="@{hero.powerstats.speed.toString()}" />

                <ProgressBar
                    android:id="@+id/speedProgress"
                    style="@style/ProgressBarTheme"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="4"
                    android:indeterminate="false"
                    android:layout_gravity="center"
                    android:max="100"
                    android:progress="@{hero.powerstats.speed}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/durability"
                    android:textColor="@color/not_selected_gray_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/durabilityTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:text="@{hero.powerstats.durability.toString()}" />

                <ProgressBar
                    android:id="@+id/durabilityProgress"
                    style="@style/ProgressBarTheme"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="4"
                    android:indeterminate="false"
                    android:layout_gravity="center"
                    android:max="100"
                    android:progress="@{hero.powerstats.durability}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/power"
                    android:textColor="@color/not_selected_gray_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/powerTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:text="@{hero.powerstats.power.toString()}" />

                <ProgressBar
                    android:id="@+id/powerProgress"
                    style="@style/ProgressBarTheme"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="4"
                    android:indeterminate="false"
                    android:layout_gravity="center"
                    android:max="100"
                    android:progress="@{hero.powerstats.power}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/combat"
                    android:textColor="@color/not_selected_gray_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/combatTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:text="@{hero.powerstats.combat.toString()}" />

                <ProgressBar
                    android:id="@+id/combatProgress"
                    style="@style/ProgressBarTheme"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="4"
                    android:indeterminate="false"
                    android:layout_gravity="center"
                    android:max="100"
                    android:progress="@{hero.powerstats.combat}" />
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>